crates/ink/tests/ui/trait_def/fail/message_receiver_invalid_3.rs
use ink_lang as ink;

#[ink::trait_definition]
pub trait TraitDefinition {
    #[ink(message)]
    fn message(this: &Self);
}

fn main() {}
